apps/acme-catalog/.tanzu/config/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: acme-catalog
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: acme-catalog
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-gateway
      sectionName: http-acme-fitness-catalog
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: acme-catalog
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /products
